--- a/web/src/assets/css/style.scss
+++ b/web/src/assets/css/style.scss
@@ -117,56 +117,51 @@ body {
 }
 
 .form.dropdown {
-  border: 1px solid $black;
-  height: 32px;
-  line-height: 35px;
-  text-align: center;
+  border: 1px solid $grey;
+  height: 28px;
+  line-height: 28px;
+  text-align: left;
   font-weight: 100;
   font-size: 0.7rem;
-  border-radius: 3px;
-  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.05);
+  border-radius: 2px;
   cursor: pointer;
   position: relative;
+  font-family: mukta;
 
   &:active {
     .label {
-      transform: scale(0.95);
+      background-color: $limewhite;
     }
   }
 
   .label { 
-    transition: transform 0.25s;
+    padding: 0 15px;
+    background-color: white;
+    transition: background 0.25s;
     transform: scale(1);
     text-transform: uppercase;
   }
 
   .dropdown-list {
+    padding-top: 2px;
     transform-origin: center top;
     position: absolute;
     width: 100%;
-    left: -2px;
-    border: 1px solid $black;
-    top: 42px;
+    left: -1px;
+    border-left: 1px solid $black;
+    border-right: 1px solid $black;
+    border-bottom: 1px solid $black;
+    top: 27px;
     max-height: 120px;
-    border-radius: 3px;
+    border-radius: 2px;
     z-index: 4;
-    box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.15);
     overflow-y: scroll;
     background-color: white;
 
     .option {
       background-color: white;
       transition: background-color 0.25s;
-
-      &.selected {
-        background-color: $cyanDark;
-        color: white;
-
-        &:hover {
-          background-color: $cyanDark;
-        }
-      }
-
+      padding: 0 15px;
       &:hover {
         background-color: $limewhite;
       }
@@ -1717,4 +1712,97 @@ body {
   left: 0;
   right: 0;
   z-index: 10000000;
+}
+
+.popup-wrapper {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 10000;
+  background-color: rgba(0, 0, 0, 0.2);
+
+  .holder {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+  }
+}
+
+.popup-container {
+  background-color: white;
+  width: 500px;
+  border-radius: 3px;
+
+  .title {
+    font-size: 0.8rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    height: 30px;
+    line-height: 30px;
+    box-sizing: border-box;
+    padding: 0 10px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  }
+
+  .body {
+    padding: 10px 10px;
+  }
+
+  .footer {
+    height: 40px;
+    line-height: 40px;
+    padding: 0 10px;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    padding-top: 10px;
+    
+    .left-action {
+      float: left;
+      width: 150px;
+    }
+
+    .right-action {
+      width: 150px;
+      float: right;
+    }
+  }
+}
+
+.selectable-label {
+  display: inline-block;
+  font-size: 0.65rem;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-weight: 600;
+  margin-right: 5px;
+  background-color: $limewhite;
+  padding: 5px 8px;
+  border-radius: 2px;
+  cursor: pointer;
+  transition: background 0.25s;
+
+  &.active {
+    background-color: $cyan;
+  }
+}
+
+.textarea-holder {
+  textarea {
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    min-width: 100%;
+    max-width: 100%;
+    min-height: 100px;
+    max-height: 600px;
+    padding: 10px;
+    font-family: khumbh-sans;
+    line-height: 18px;
+    height: 140px;
+    border: 1px solid $grey;
+    border-radius: 3px;
+  }
 }
