added show/hide btn to in-review entries

--- a/web/src/assets/css/style.scss
+++ b/web/src/assets/css/style.scss
@@ -1950,3 +1950,14 @@ body {
 
   }
 }
+
+.link {
+  color: #64aae3;
+  text-transform: none;
+  font-weight: 100;
+  cursor: pointer;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
