--- a/web/src/assets/css/style.scss
+++ b/web/src/assets/css/style.scss
@@ -925,6 +925,16 @@ body {
   }
 }
 
+.submenu-title {
+  font-weight: 600;
+  text-transform: uppercase;
+  color: rgba(0, 0, 0, 0.6);
+  letter-spacing: 1.3px;
+  font-size: 0.7rem;
+  height: 30px;
+  line-height: 30px;
+}
+
 .graph-holder {
   height: 250px;
 }
@@ -1974,7 +1984,7 @@ body {
   }
 
   &.warning {
-
+    color: #c96c20;
   }
 
   .icon-holder {
@@ -2102,6 +2112,60 @@ body {
     &:hover {
       width: 4px;
       background-color: $cyan;
+    }
+  }
+}
+
+.logo-holder {
+  display: flex;
+
+  .logo-text {
+    height: 40px;
+    line-height: 45px;
+    font-family: khumbh-sans;
+    font-weight: 600;
+    font-size: 1.1rem;
+    margin-left: 5px;
+  }
+}
+
+.document-thumb-preview {
+  width: 170px;
+  height: 170px;
+  border: 1px solid #BCBCBC;
+  display: inline-block;
+  margin-right: 15px;
+  margin-bottom: 15px;
+  border-radius: 3px;
+
+  &:hover {
+    border: 1px solid $cyanDark;
+    cursor: pointer;
+
+    .meta-header {
+      border-bottom: 1px solid $cyanDark;
+
+      .expand-button {
+        right: 4px;
+        opacity: 1;
+      }
+    }
+  }
+
+  .meta-header {
+    font-size: 0.75rem;
+    font-family: mukta;
+    letter-spacing: 0.8px;
+    padding: 0 4px;
+    border-bottom:1px solid #BCBCBC;
+    position: relative;
+
+    .expand-button {
+      position: absolute;
+      right: 2px;
+      opacity: 0;
+      top: 2px;
+      transition: opacity 0.25s, right 0.25s;
     }
   }
 }
