--- a/web/src/assets/css/style.scss
+++ b/web/src/assets/css/style.scss
@@ -2159,6 +2159,18 @@ body {
     padding: 0 4px;
     border-bottom:1px solid #BCBCBC;
     position: relative;
+    
+    .file-name {
+      font-family: mukta;
+      font-size: 0.8rem;
+      line-height: 30px;
+      margin: 0 7px;
+      font-weight: 600;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      width: 100px;
+    }
 
     .expand-button {
       position: absolute;
