removed placeholder conflict with actual data

--- a/web/src/assets/css/style.scss
+++ b/web/src/assets/css/style.scss
@@ -1972,6 +1972,28 @@ body {
   }
 }
 
+.success-line {
+  font-family: mukta;
+  font-size: 0.8rem;
+  letter-spacing: 0.8px;
+  line-height: 15px;
+  padding: 10px 0;
+  color: #55c98b;
+
+  .icon-holder {
+    display: inline-block;
+    vertical-align: top;
+    line-height: 0px;
+    transform: translateY(1px);
+  }
+
+  .error-area {
+    display: inline-block;
+    vertical-align: top;
+  }
+
+}
+
 .error-line {
   font-family: mukta;
   font-size: 0.8rem;
