Added uo for approve / decline ownerships

--- a/web/src/assets/css/style.scss
+++ b/web/src/assets/css/style.scss
@@ -2240,3 +2240,36 @@ body {
     background-color: $cyan;
   }
 }
+
+.status-color {
+
+  &.in-review {
+    color: #c96c20;
+    .circle_ {
+      background-color: #c96c20;
+    }
+  }
+
+ & .declined {
+    color: #d64949;
+    .circle_ {
+      background-color: #d64949;
+    }
+  }
+
+  &.confirmed {
+    color: #55c98b;
+    .circle_ {
+      background-color: #55c98b;
+    }
+  }
+
+  .circle_ {
+    width: 8px;
+    height: 8px;
+    background-color: #64aae3;
+    border-radius: 100px;
+    display: inline-block;
+    margin-right: 5px;
+  }
+}
