replaced old menu with new collapsable menu:

--- a/web/src/assets/css/fonts.scss
+++ b/web/src/assets/css/fonts.scss
@@ -19,3 +19,8 @@
   src: url('../fonts/Mukta/Mukta-Medium.ttf');
   font-weight: 600;
 }
+
+@font-face {
+  font-family: mont;
+  src: url('../fonts/Mont/FontsFree-Net-Mont1.ttf');
+}
