--- a/web/src/assets/css/style.scss
+++ b/web/src/assets/css/style.scss
@@ -2620,9 +2620,22 @@ body {
 .form-input-slider {
   height: 6px;
   width: 100%;
-  background-color: $navy;
+  background-color: $navyLight;
   border-radius: 10px;
   position: relative;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+
+  .slider-range-filler {
+    position: absolute;
+    height: 6px;
+    background-color: red;
+    background-color: $navy;
+  }
 
   .slider-ctrl {
     width: 8px;
@@ -2651,6 +2664,7 @@ body {
       padding: 5px 8px;
       z-index: 6;
       white-space: nowrap;
+      box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
 
       .triangle-ptr {
         position: absolute;
@@ -2665,6 +2679,26 @@ body {
       }
     }
   }
+
+  .number-line {
+    height: 13px;
+    position: relative;
+    top: 12px;
+    display: flex;
+
+    .number {
+      font-family: sans-serif;
+      font-size: 0.7rem;
+      color: rgba(0, 0, 0, 0.4);
+      text-align: center;
+      border-right: 1px solid rgba(0, 0, 0, 0.4);
+
+      &.first {
+        border-left: 1px solid rgba(0, 0, 0, 0.4);
+      }
+    }
+  }
+  margin-bottom: 15px;
 }
 
 .comment-bubble-2 {
@@ -2673,4 +2707,188 @@ body {
   color: white;
   font-size: 0.7rem;
   font-family: sans-serif;
+}
+
+.search-filter-box {
+
+  .input-label_ {
+    font-family: sans-serif;
+    font-size: 0.8rem;
+    margin-bottom: 10px;
+  }
+}
+
+.form-counter {
+  display: inline-block;
+  width: 45px;
+  height: 25px;
+  position: relative;
+
+  input {
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    font-size: 0.7rem;
+    border-radius: 3px;
+    border: 1px solid $navy;
+    padding: 0 5px;
+    background-color: rgba(0, 0, 0, 0);
+    font-family: sans-serif;
+  }
+
+  .value-ctrl {
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    z-index: 2;
+    background-color: $navy;
+    border-radius: 3px;
+    cursor: pointer;
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.02);
+    transition: box-shadow 0.25s;
+    color: white;
+    font-size: 0.7rem;
+    text-align: center;
+    line-height: 20px;
+
+    &:hover {
+      box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    &.increase {
+      right: 0px;
+      top: -20%;
+      transform: translateX(50%);
+    }
+
+    &.decrease {
+      right: 0px;
+      bottom: -20%;
+      transform: translateX(50%);
+    }
+  }
+}
+
+.search-container {
+  // border: 1px solid red;
+  height: 1500px;
+  display: flex;
+  position: relative;
+  justify-content: flex-end;
+
+  .left-side_ {
+    // border: 1px solid green;
+    width: 50%;
+    position: fixed;
+    top: 62px;
+    bottom: 20px;
+    display: flex;
+    flex-direction: column;
+
+    .search-filter-box {
+      background-color: white;
+      border-radius: 5px;
+      padding: 0 10px;
+      position: relative;
+      z-index: 2;
+      box-shadow: 0px 3px 5px rgba(59, 67, 83, 0.05);
+    }
+
+    .map-box {
+      z-index: 1;
+      position: relative;
+      border: 1px solid red;
+      transform: translateY(-10px);
+      flex-grow: 1;
+      margin: 0 10px;
+      border-radius: 3px;
+      overflow: hidden;
+    }
+  }
+
+  .right-side_ {
+    // border: 1px solid blue;
+    width: 50%;
+    border: 1px solid green;
+  }
+}
+
+.filter-bottom-counters {
+  margin-top: 10px;
+  display: flex;
+
+  .inline-form-input {
+    display: flex;
+    width: 50%;
+    padding: 0;
+
+    &.right {
+      justify-content: flex-end;
+      border-left: 1px solid $navyLight;
+    }
+  
+    .input-label_ {
+      transform: translateY(5px);
+      margin-right: 15px;
+      box-sizing: border-box;
+
+      margin-top: 0;
+    }
+  
+    // .input-area_ {
+  
+    // }
+  }
+}
+
+@media only screen and (max-width: 1300px) {
+  .filter-bottom-counters {
+    display: block;
+    .inline-form-input {
+      display: flex;
+      width: 100%;
+
+      &.right {
+        border-left: none;
+        justify-content: flex-start;
+      }
+    }
+  }
+}
+
+.more-details {
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  background-color: $navy;
+  border-radius: 50px;
+  color: white;
+  font-size: 0.6rem;
+  text-align: center;
+  position: relative;
+  line-height: 12px;
+  cursor: help;
+
+  .details-area {
+    font-size: 0.7rem;
+    padding: 3px 4px;
+    position: fixed;
+    color: white;
+    max-width: 200px;
+    width: 200px;
+    z-index: 9;
+    background-color: #272b33;
+    border-radius: 3px;
+    transform: translateY(15px);
+
+    .details {
+      width: fit-content;
+      width: -moz-fit-content;
+    }
+  }
+}
+
+.leaflet-container {
+  width: 100%;
+  height: 100%;
 }
