--- a/web/src/assets/css/style.scss
+++ b/web/src/assets/css/style.scss
@@ -1020,6 +1020,7 @@ body {
   .content-area {
     flex-grow: 1;
     position: relative;
+    border: 1px solid red;
   }
 }
 
@@ -2350,6 +2351,7 @@ body {
           border-radius: 3px;
           font-family: sans-serif;
           padding: 0 5px 5px;
+          z-index: 10;
 
           .header {
             height: 25px;
@@ -2362,7 +2364,6 @@ body {
           .control-menu {
             box-sizing: border-box;
             font-size: 0.7rem;
-            z-index: 6;
             
             .ctrl-menu-item {
               display: flex;
@@ -2388,10 +2389,6 @@ body {
                 margin-right: 5px;
                 text-align: center;
                 line-height: 25px;
-              }
-
-              .ctrl-text-area {
-
               }
             }
           }
@@ -2611,6 +2608,29 @@ body {
       font-size: 0.8rem;
     }
   }
+
+  .left-attachment-ctrl {
+    width: 600px;
+    position: absolute;
+    right: -650px;
+    top: 20px;
+    bottom: 20px;
+    border: 1px solid green;
+
+    .content-start-indicator {
+      width: 10px;
+      height: 10px;
+      position: absolute;
+      z-index: 100;
+      background-color: red;
+      right: 0;
+      top: 0;
+
+      &.raw {
+        right: -100px;
+      }
+    }
+  }
 }
 
 body {
@@ -2633,7 +2653,6 @@ body {
   .slider-range-filler {
     position: absolute;
     height: 6px;
-    background-color: red;
     background-color: $navy;
   }
 
@@ -2774,42 +2793,11 @@ body {
   height: 1500px;
   display: flex;
   position: relative;
-  justify-content: flex-end;
-
-  .left-side_ {
-    // border: 1px solid green;
-    width: 50%;
-    position: fixed;
-    top: 62px;
-    bottom: 20px;
-    display: flex;
-    flex-direction: column;
-
-    .search-filter-box {
-      background-color: white;
-      border-radius: 5px;
-      padding: 0 10px;
-      position: relative;
-      z-index: 2;
-      box-shadow: 0px 3px 5px rgba(59, 67, 83, 0.05);
-    }
-
-    .map-box {
-      z-index: 1;
-      position: relative;
-      border: 1px solid red;
-      transform: translateY(-10px);
-      flex-grow: 1;
-      margin: 0 10px;
-      border-radius: 3px;
-      overflow: hidden;
-    }
-  }
+  justify-content: flex-start;
 
   .right-side_ {
     // border: 1px solid blue;
     width: 50%;
-    border: 1px solid green;
   }
 }
 
@@ -2891,4 +2879,37 @@ body {
 .leaflet-container {
   width: 100%;
   height: 100%;
+}
+
+.filter-map-attachment {
+  height: 100%;
+  .left-side_ {
+    // border: 1px solid green;
+    // width: 50%;
+    // position: fixed;
+    // top: 20px;
+    // bottom: 20px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+
+    .search-filter-box {
+      background-color: white;
+      border-radius: 5px;
+      padding: 0 10px;
+      position: relative;
+      z-index: 2;
+      box-shadow: 0px 3px 5px rgba(59, 67, 83, 0.05);
+    }
+
+    .map-box {
+      z-index: 1;
+      position: relative;
+      transform: translateY(-10px);
+      flex-grow: 1;
+      margin: 0 10px;
+      border-radius: 3px;
+      overflow: hidden;
+    }
+  }
 }
