added right sidebar

--- a/web/src/assets/css/_colors.scss
+++ b/web/src/assets/css/_colors.scss
@@ -11,6 +11,7 @@ $navyVeryLight: #F6F7F9;
 $navy: #3B4353;
 $silverSand: #96b5b1;
 $bgColor: #F6F9FB;
+$navyLightText: #9fb0bd;
 
 :export {
     navy: $navy;
