--- a/web/src/assets/css/style.scss
+++ b/web/src/assets/css/style.scss
@@ -436,14 +436,14 @@ body {
 
     .option {
       padding: 0 10px;
-      font-family: mukta;
+      font-family: sans-serif;
       height: 26px;
       line-height: 26px;
       font-size: 0.7rem;
       cursor: pointer;
       background-color: white;
       transition: background 0.25s;
-      letter-spacing: 1.1px;
+      letter-spacing: 0.8px;
       position: relative;
       top: -1px;
       margin-left: 1px;
@@ -2279,6 +2279,49 @@ body {
   font-style: italic;
 }
 
+.vertical-sidebar {
+  position: fixed;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 200px;
+  z-index: 2;
+  background-color: white;
+
+  .content-end-indicator {
+    width: 10px;
+    height: 10px;
+    position: absolute;
+    left: -50px;
+    top: 0;
+    background-color: red;
+    z-index: 1000;
+    top: 20px;
+  }
+
+  .menu-collapse-btn {
+    width: 25px;
+    height: 25px;
+    line-height: 32px;
+    border: 1px solid #cad3d9;
+    text-align: center;
+    border-radius: 3px;
+    position: absolute;
+    left: -10px;
+    background-color: white;
+    color: #cad3d9;
+    top: 17px;
+    cursor: pointer;
+    box-shadow: 0px 0px 2.5px rgba(0, 0, 0, 0.0);
+    transform: translateX(0px) rotate(180deg);
+    transition: box-shadow 0.15s, color 0.15s, border 0.15s, transform 0.25s;
+
+    &.collapsed {
+      transform: translateX(-8px) rotate(0deg);
+    }
+  }
+}
+
 .vertical-navbar {
   position: fixed;
   left: 0;
@@ -2882,7 +2925,7 @@ body {
 }
 
 .filter-map-attachment {
-  height: 100%;
+  height: calc(100% - 36px);
   .left-side_ {
     // border: 1px solid green;
     // width: 50%;
@@ -2911,5 +2954,27 @@ body {
       border-radius: 3px;
       overflow: hidden;
     }
+  }
+}
+
+.section-header-2 {
+  padding: 8px 0;
+  display: flex;
+  align-items: flex-end;
+  height: 30px;
+
+  .title-area {
+    font-family: sans-serif;
+    font-size: 1.3rem;
+    height: fit-content;
+    line-height: normal;
+  }
+
+  .counter_ {
+    height: fit-content;
+    line-height: normal;
+    transform: translateY(1px);
+    margin-left: 10px;
+    color: $navyLightText;
   }
 }
